src/snapshots/scooter_hx__snapshot_tests__highlighted_preview_wide.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 160x45
00 |  ┌─Search text──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  |
01 |  │alpha                                                                                                                                                     │  |
02 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
03 |  ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  |
04 |  │OMEGA                                                                                                                                                     │  |
05 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
06 |                                                                                                                                                                |
07 |  Results: 1 [Search complete]                                                                                                            [Time taken: TIME]  |
08 |                                                                                                                                                                |
09 |  [x] fixture.rs:2                                           (1)   pub fn context_before_with_a_deliberately_long_name() { let value = 1; }                     |
10 |                                                                 - let alpha = value;                                                                           |
11 |                                                                 + let OMEGA = value;                                                                           |
12 |                                                                   pub fn context_after() -> usize { 2 }                                                        |
13 |                                                                                                                                                                |
14 |                                                                                                                                                                |
15 |                                                                                                                                                                |
16 |                                                                                                                                                                |
17 |                                                                                                                                                                |
18 |                                                                                                                                                                |
19 |                                                                                                                                                                |
20 |                                                                                                                                                                |
21 |                                                                                                                                                                |
22 |                                                                                                                                                                |
23 |                                                                                                                                                                |
24 |                                                                                                                                                                |
25 |                                                                                                                                                                |
26 |                                                                                                                                                                |
27 |                                                                                                                                                                |
28 |                                                                                                                                                                |
29 |                                                                                                                                                                |
30 |                                                                                                                                                                |
31 |                                                                                                                                                                |
32 |                                                                                                                                                                |
33 |                                                                                                                                                                |
34 |                                                                                                                                                                |
35 |                                                                                                                                                                |
36 |                                                                                                                                                                |
37 |                                                                                                                                                                |
38 |                                                                                                                                                                |
39 |                                                                                                                                                                |
40 |                                                                                                                                                                |
41 |                                                                                                                                                                |
42 |                                                                                                                                                                |
43 |                                                                                                                                                                |
44 |                               <space> toggle / <esc> back to search fields / <enter> replace selected / <C-h> help / <C-c> quit                                |
tags:
00: 2-158 text
01: 2-8 text | 157-158 text
02: 2-158 text
03: 2-158 text
04: 2-8 text | 157-158 text
05: 2-158 text
07: 2-12 text | 12-30 diff-added | 138-158 diff-added
09: 2-64 selection | 65-67 text | 67-70 s:keyword | 70-71 text | 71-73 s:keyword.function | 73-74 text | 74-118 s:function | 118-120 s:punctuation.bracket | 120-121 text | 121-122 s:punctuation.bracket | 122-123 text | 123-126 s:keyword.storage | 126-127 text | 127-132 s:variable | 132-133 text | 133-134 s:operator | 134-135 text | 135-136 s:constant.numeric.integer | 136-137 s:punctuation.delimiter | 137-138 text | 138-139 s:punctuation.bracket | 139-158 preview
10: 65-71 diff-removed | 71-76 diff-removed-emph | 76-85 diff-removed | 85-158 preview
11: 65-71 diff-added | 71-76 diff-added-emph | 76-85 diff-added | 85-158 preview
12: 65-67 text | 67-70 s:keyword | 70-71 text | 71-73 s:keyword.function | 73-74 text | 74-87 s:function | 87-89 s:punctuation.bracket | 89-90 text | 90-92 s:operator | 92-93 text | 93-98 s:type.builtin | 98-99 text | 99-100 s:punctuation.bracket | 100-101 text | 101-102 s:constant.numeric.integer | 102-103 text | 103-104 s:punctuation.bracket | 104-158 preview
13: 65-158 preview
14: 65-158 preview
15: 65-158 preview
16: 65-158 preview
17: 65-158 preview
18: 65-158 preview
19: 65-158 preview
20: 65-158 preview
21: 65-158 preview
22: 65-158 preview
23: 65-158 preview
24: 65-158 preview
25: 65-158 preview
26: 65-158 preview
27: 65-158 preview
28: 65-158 preview
29: 65-158 preview
30: 65-158 preview
31: 65-158 preview
32: 65-158 preview
33: 65-158 preview
34: 65-158 preview
35: 65-158 preview
36: 65-158 preview
37: 65-158 preview
38: 65-158 preview
39: 65-158 preview
40: 65-158 preview
41: 65-158 preview
42: 65-158 preview
43: 65-158 preview
44: 31-128 info
