src/snapshots/scooter_hx__snapshot_tests__multiselect_flipped_direction.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 160x45
00 |        ┌─Search text──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        |
01 |        │alpha                                                                                                                                         │        |
02 |        └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        |
03 |        ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        |
04 |        │                                                                                                                                              │        |
05 |        └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        |
06 |                                                                                                                                                                |
07 |        Results: 4 [Search complete]                                                                                                [Time taken: TIME]        |
08 |                                                                                                                                                                |
09 |        [x] fixture.txt:1                                     (1) - alpha 1                                                                                     |
10 |        [x] fixture.txt:2                                     (2) +  1                                                                                          |
11 |        [x] fixture.txt:3                                     (3)   alpha 2                                                                                     |
12 |        [x] fixture.txt:4                                     (4)   alpha 3                                                                                     |
13 |                                                                    alpha 4                                                                                     |
14 |                                                                                                                                                                |
15 |                                                                                                                                                                |
16 |                                                                                                                                                                |
17 |                                                                                                                                                                |
18 |                                                                                                                                                                |
19 |                                                                                                                                                                |
20 |                                                                                                                                                                |
21 |                                                                                                                                                                |
22 |                                                                                                                                                                |
23 |                                                                                                                                                                |
24 |                                                                                                                                                                |
25 |                                                                                                                                                                |
26 |                                                                                                                                                                |
27 |                                                                                                                                                                |
28 |                                                                                                                                                                |
29 |                                                                                                                                                                |
30 |                                                                                                                                                                |
31 |                                                                                                                                                                |
32 |                                                                                                                                                                |
33 |                                                                                                                                                                |
34 |                                                                                                                                                                |
35 |                                                                                                                                                                |
36 |                                                                                                                                                                |
37 |                                                                                                                                                                |
38 |                                                                                                                                                                |
39 |                                                                                                                                                                |
40 |                                                                                                                                                                |
41 |                                                                                                                                                                |
42 |                                                                                                                                                                |
43 |                                                                                                                                                                |
44 |                               <space> toggle / <esc> back to search fields / <enter> replace selected / <C-h> help / <C-c> quit                                |
tags:
00: 8-152 text
01: 8-14 text | 151-152 text
02: 8-152 text
03: 8-152 text
04: 8-9 text | 151-152 text
05: 8-152 text
07: 8-18 text | 18-36 diff-added | 132-152 diff-added
09: 8-65 selection | 66-68 diff-removed | 68-73 diff-removed-emph | 73-75 diff-removed
10: 8-65 selection-secondary | 66-70 diff-added
11: 8-65 selection-secondary | 66-75 text
12: 8-12 info | 12-23 text | 23-25 info | 61-65 info | 66-75 text
13: 66-75 text
44: 31-128 info
